# ppo_libtorch

./: .gitignore  CMakeLists.txt  README.md  eval_ppo.cpp  eval_script.sh  test_env.cpp  train_ppo.cpp  train_ppo_cnn.cpp  train_script.sh
best_ckpt/size16_1e8/: 0100007936.pt
best_ckpt/size8_2e7/: 0020004864.pt
best_ckpt/v1_seed1_size8_5e8/: 0500006912.pt
best_ckpt/v2_seed1_size8_5e8/: 0500023296.pt
best_ckpt/v3-retry_seed1_size8_1e9/: 1000005632.pt
best_ckpt/v3_seed1_size8_13e8/: 1330012160.pt
best_ckpt/v3_seed1_size8_5e8/: 0500006912.pt  0560005120.pt
best_ckpt/v4_seed1_size8_1e9/: 1000005632.pt
env/: env.h  env_snake.h  env_snake_sfml.h  vec_env.h  vec_env_v1.h
include/model/: cnn.h  mlp.h
tests/: test_cnn.cpp
